test/semantics/programs/invalid/invalid-operation4.guav
# Should fail since incompatible operand types

x = "string" * 8.131
